Removed depracted code, applyed and improved documentation, upgraded some core file to work and interact better