@@ -40,9 +40,13 @@ import java.util.LinkedList;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Queue;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkNotNull;
 
 @Alpha
 @NotDocumentedWell
@@ -57,13 +61,15 @@ public class ExtensibleTelemetry {
 
     private final EvictingQueue<String> dataCache;
     private final LinkedHashMultimap<String, String> data;
-
     private final Cache<String, String> cache;
     private final Queue<String> log;
+
     private Process logcat;
     private BufferedReader reader;
+
     private long lastModificationTime;
-    private long cacheBuildTime;
+
+    private ScheduledExecutorService executorService;
 
     public ExtensibleTelemetry(@NotNull Telemetry telemetry) {
         this(DEFAULT_DATA_MAX, telemetry);
@@ -85,14 +91,17 @@ public class ExtensibleTelemetry {
         log = new LinkedList<>();
 
         try {
-            logcat = Runtime.getRuntime().exec("logcat -v time *:W");
+            logcat = Runtime.getRuntime().exec(new String[] {"logcat", "*:I"});
             reader = new BufferedReader(new InputStreamReader(logcat.getInputStream()));
         } catch (IOException e) {
             Log.e(TAG, "Cannot start logcat monitor", e);
         }
+
+        executorService = Executors.newSingleThreadScheduledExecutor();
+        executorService.scheduleAtFixedRate(new SendDataRunnable(), 250, 250, TimeUnit.MILLISECONDS);
     }
 
-    public void data(String tag, String message) {
+    public synchronized void data(String tag, String message) {
         checkArgument(!Strings.isNullOrEmpty(message), "Your message shouldn't be empty.");
         tag = Strings.nullToEmpty(tag);
 
@@ -102,18 +111,18 @@ public class ExtensibleTelemetry {
         }
     }
 
-    public void addPersistentData(String tag, String mess) {
+    public synchronized void addPersistentData(String tag, String mess) {
         synchronized (data) {
             lastModificationTime = System.nanoTime();
             data.put(tag, mess);
         }
     }
 
-    public void data(String tag, double message) {
+    public synchronized void data(String tag, double message) {
         data(tag, Double.toString(message));
     }
 
-    public void updateLog() {
+    void updateLog() {
         //String temp = null;
            /* StringBuilder buf = new StringBuilder();
             try {
@@ -128,21 +137,30 @@ public class ExtensibleTelemetry {
             log.add(buf.toString());*/
     }
 
-    public void close() throws IOException {
+    synchronized void close() throws IOException {
+        executorService.shutdown();
         reader.close();
         logcat.destroy();
-
-        parent.clearData();
-
-        log.clear();
-        dataCache.clear();
-        data.clear();
-        cache.invalidateAll();
+        synchronized (parent) {
+            parent.clearData();
+        }
+        synchronized (log) {
+            log.clear();
+        }
+        synchronized (dataCache) {
+            dataCache.clear();
+        }
+        synchronized (data) {
+            data.clear();
+        }
+        synchronized (cache) {
+            cache.invalidateAll();
+        }
     }
 
-    public void updateCache() {
+    void updateCache() {
         int cacheSize = (int) cache.size();
-        if (lastModificationTime > cacheBuildTime) {
+        if (lastModificationTime > 0) {
             forceUpdateCache();
         } else {
             cache.cleanUp();
@@ -152,7 +170,7 @@ public class ExtensibleTelemetry {
         }
     }
 
-    public void forceUpdateCache() {
+    synchronized void forceUpdateCache() {
         updateLog();
 
         int numberOfElements;
@@ -161,10 +179,10 @@ public class ExtensibleTelemetry {
 
             synchronized (dataCache) {
                 int numberOfElementsAdded = 0;
-                int min = Math.min(dataCache.size(),
-                        (int) (dataPointsToSend * .75));
+                int min = Math.min(dataCache.size(), (int) (dataPointsToSend * .75));
+                int stringLength = String.valueOf(min).length();
                 for (; numberOfElementsAdded < min; numberOfElementsAdded++) {
-                    cache.put(String.valueOf(numberOfElementsAdded), dataCache.poll());
+                    cache.put(cancelOut(stringLength, String.valueOf(numberOfElementsAdded)), dataCache.poll());
                 }
                 numberOfElements = numberOfElementsAdded;
             }
@@ -178,9 +196,9 @@ public class ExtensibleTelemetry {
                     LinkedList<String> dataElements = new LinkedList<>(data.get(key.getElement()));
 
                     int size = dataElements.size();
+
                     for (int index = 0; numberOfElementsAdded < size; numberOfElementsAdded++) {
-                        StringBuilder builder = new StringBuilder(key.getElement().length() + String.valueOf(index).length());
-                        entries.put(builder.append(key.getElement()).append(Integer.toString(index)).toString(), dataElements.get(index));
+                        entries.put(cancelOut(1, key.getElement() + Integer.toString(index)), dataElements.get(index));
                     }
                 }
 
@@ -198,10 +216,13 @@ public class ExtensibleTelemetry {
         }
     }
 
-    public void sendData() {
+    synchronized void sendData() {
         updateCache();
 
-        LinkedList<Map.Entry<String, String>> data = new LinkedList<>(cache.asMap().entrySet());
+        LinkedList<Map.Entry<String, String>> data;
+        synchronized (cache) {
+            data = new LinkedList<>(cache.asMap().entrySet());
+        }
         for (Map.Entry<String, String> entry : data) {
             parent.addData(entry.getKey(), entry.getValue());
         }
@@ -213,6 +234,32 @@ public class ExtensibleTelemetry {
                 for (; numberOfElementsAdded < min; numberOfElementsAdded++) {
                     parent.addData("xLog" + String.valueOf(numberOfElementsAdded), log.poll());
                 }
+            }
+        }
+    }
+
+    /**
+     * Pads the end of a string with enough "\b" characters to cancel out the original string, if
+     * it is every printed
+     * @param string the string to cancel out
+     * @return the string padded with {@code '\b'} characters
+     */
+    @NotNull
+    private String cancelOut(int length, @NotNull String string) {
+        return  Strings.padStart(checkNotNull(string), length, '0');
+    }
+
+    private class SendDataRunnable implements Runnable {
+        /**
+         * Starts executing the active part of the class' code. This method is called when a thread is
+         * started that has been created with a class which implements {@code Runnable}.
+         */
+        @Override
+        public void run() {
+            try {
+                sendData();
+            } catch (Exception ex) {
+                Log.w(TAG, "Telemetry Sender threw an exception while executing.", ex);
             }
         }
     }
